--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -1,20 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Brown rabbit test</title>
-        <link rel="stylesheet" href="css/main.css" type="text/css" >
-    </head>
-    <body>
-        <div class="wrapper">
-            <img src="assets/twentyfour-logo.svg" alt="Twentyfour!"/>
-            <h1 id="headline">
-                THE BROWN
-            </h1>
-            <a target="_blank" href="../readme.md">Project description</a>
-            <span> · </span>
-            <a target="_blank" href="https://xd.adobe.com/view/e3a1c6ff-52f7-41ed-9e70-bad4e6e9b930-b6f2/grid"> See design</a>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Brown rabbit test</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+</head>
+
+<body>
+    <header>
+        <div>
+            <img src="assets/logo-white.png" alt="Logo" />
         </div>
-        <script src="js/scripts.js" type="text/javascript"></script>
-    </body>
+
+        <div class="nav">
+            <div>
+                <ul>
+                    <li><input type="search" placeholder="search"></li>
+                    <li><img src="assets/icons/linkedin-white.svg" alt="LinkedIn icon"></li>
+                    <li><img src="assets/icons/twitter-white.svg" alt="Twitter icon"></li>
+                    <li><img src="assets/icons/instagram-white.svg" alt="Instagram icon"></li>
+                    <li><img src="assets/icons/facebook-white.svg" alt="Facebook icon"></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>About us</li>
+                    <li>Events</li>
+                    <li>Nordic roaster</li>
+                    <li>Results</li>
+                    <li>Links</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="second-container">
+            <div>
+
+            </div>
+            <div class="posts">
+
+            </div>
+
+            <div class="information">
+                <div>
+                    <h2>WBC Shop</h2>
+                    <p>Your shopping cat is empty</p>
+                    <button>Visit the shop</button>
+                </div>
+
+                <hr>
+
+                <div>
+                    <h2>Next event</h2>
+                    <h3>World Barista Cup 2021</h3>
+                    <address>
+                        Copenhagen, Denmark <br>
+                        Dates: 25th - 27th August 2011 <br>
+                        Theme: SENSORY
+                    </address>
+                </div>
+
+                <hr>
+
+                <div>
+                    <h2>Scoreboard</h2>
+                    <h3>List of winners from last year</h3>
+                    <ul>
+                        <li>2021 - ?</li>
+                        <li>2020 - Denmark</li>
+                        <li>2021 - Sweden</li>
+                        <li>2021 - Turkey</li>
+                        <li>2021 - Italy</li>
+                        <li>2021 - Italy</li>
+                        <li>2021 - Germany</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+        <hr class="lineBreak">
+
+        <div class="third-container">
+            <h2>World Barista Cup Sponsors</h2>
+            <div id="logos">
+
+            </div>
+        </div>
+    </main>
+
+    <footer id="footerWrapper">
+        <div id="footer-container">
+            <div class="footer-container1">
+                <div>
+                    <img src="assets/logo-white.png" alt="Logo" id="logo" />
+                </div>
+                <div class="footerLinks">
+                    <a href="#"><img src="./assets/icons/linkedin-white.svg" alt="LinkedIn"></a>
+                    <a href="#"><img src="./assets/icons/twitter-white.svg" alt="Tweeter"></a>
+                    <a href="#"><img src="./assets/icons/instagram-white.svg" alt="Instagram"></a>
+                    <a href="#"><img src="./assets/icons/facebook-white.svg" alt="Facebook"></a>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="footer-container2">
+                <div>
+                    <h3>About World Barista Cup</h3>
+
+                    <h4>The vision within The World Barista Cup</h4>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat</p>
+                </div>
+
+                <div>
+                    <h3>Instagram feed</h3>
+                    <ul>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-9.png" alt="Hot coffee cup"></li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-1.png" alt="Coffee mug"></li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-2.png" alt="Coffee banner"></li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-3.png" alt="Lady drinking coffee">
+                        </li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-4.png" alt="A hand poured coffee">
+                        </li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-5.png" alt="Coffee cups"></li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-6.png" alt="Milk added in coffee">
+                        </li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-7.png" alt="Breewing coffee"></li>
+                        <li><img src="./assets/images/instagram-feed/instagram-image-8.png" alt="Coffee mug and cup">
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Contact</h3>
+                    <span>World Barista Cup</span>
+                    <address>
+                        Amagertorv 13 <br>
+                        1160 Copenhagen K <br>
+                        +45 33 12 04 28 <br>
+                        CVR: 11427693 <br>
+                        Email: info@worldbaristacup.com
+                    </address>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="js/data.js"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
+</body>
+
 </html>
