--- a/brown_rabbit/src/index.html
+++ b/brown_rabbit/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brown rabbit test</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
@@ -10,7 +11,7 @@
 <body>
     <header>
         <div>
-            <img src="assets/logo-white.png" alt="Logo" />
+            <img src="assets/logo-white.png" alt="Logo" id="logo"/>
         </div>
 
         <div class="nav">
